tools/architecture/validate-source-imports/tests/fixtures/invalid/deep-import/src/index.ts
import { something } from "@platform/domain-core/src/internal";
export const packageName = "@platform/feature-workflow";
